package org.core;

import java.util.Collection;

public interface RepositorioCliente{
    public static void guardarCliente(java.util.Collection<Cliente> clientes) {

    }

    public void guardarEstadosCliente(Collection<String> EstadosCliente);

    static void cargarClientes() {

    }

    static void cargarEstadosCliente() {

    }
}
