@startuml
class org.core.ServicioAutocaravana {
- {static} String AUTOCARAVANAS_FILE
- {static} String ESTADOSAUTOCARAVANA_FILE
- {static} List<String> listaEstadosAutocaravana
+ {static} void cargarAutocaravana()
+ {static} void cargarEstadosAutocaravana()
+ void guardarEstadoAutocaravana(Collection<String>)
+ void guardarAutocaravana(Collection<Autocaravana>)
+ {static} List<String> getListaEstadoAutocaravana()
+ {static} boolean comprobarEstadoAutocaravana(String)
}
class org.core.Main {
+ {static} void main(String[])
}
class org.core.ServicioCliente {
- {static} java.lang.String CLIENTES_FILE
- {static} java.lang.String ESTADOSCLIENTE_FILE
- {static} java.util.List<java.lang.String> listaEstadosCliente
+ {static} java.util.List<java.lang.String> getListaEstadoClientes()
+ {static} void cargarClientes()
+ {static} void cargarEstadosCliente()
+ {static} void guardarCliente(Collection<Cliente>)
+ void guardarEstadosCliente(Collection<String>)
}
interface org.core.ReglasCliente {
+ boolean comprobarCliente(Cliente)
}
class org.core.Reserva {
- int idR
- Autocaravana caravana
- Cliente cliente
- LocalDate fechaIni
- LocalDate fechaFin
- String estadoReserva
- float precioTotal
- {static} ServicioReserva servidor
- {static} List<Reserva> listaReservas
- {static} int cantidadReservas
+ {static} List<Reserva> getListaReservas()
+ {static} Reserva buscarReserva(int)
+ {static} List<Reserva> buscarReserva(String,String)
+ void asociarestado(String)
+ int getIdR()
+ Autocaravana getAutocaravana()
+ Cliente getCliente()
+ LocalDate getFechaIni()
+ LocalDate getFechaFin()
+ float getPrecioTotal()
+ String getEstadoReserva()
+ int siguienteReserva()
+ void checkOut()
+ String toString()
+ void eliminarReserva()
}
interface org.core.ReglasAutocaravana {
~ {static} boolean comprobarMatricula(String)
}
interface org.core.ReglasReserva {
~ {static} List<String> listaEstadosReserva
~ {static} void borrarEstado(String)
+ {static} void eliminarEstadoReserva(String)
+ {static} boolean comprobarEstadoReserva(String)
~ float calculaPrecioTotal(Autocaravana,Cliente,LocalDate,LocalDate)
~ {static} void addEstadoReserva(String)
~ boolean comprobarCambioEstado(Reserva,String)
~ boolean condicionesCancelacion(Reserva)
~ boolean condicionesModificacion(Reserva)
~ boolean condicionesFinalizacion(Reserva)
~ float calcularTasaCancelacion(Reserva)
~ float calcularTasaModificacion(Reserva)
~ float calcularTasaFinalizacion(Reserva)
~ float calcularMulta(Reserva)
~ boolean comprobarCaravana(Autocaravana)
~ boolean comprobarCliente(Cliente)
~ boolean comprobarReserva(LocalDate,LocalDate,Autocaravana,Cliente)
}
class org.core.ClienteTests {
+ void setUp()
~ void testCliente()
+ void testNombreVacio()
+ void testApellidoVacio()
+ void testFechaIncorrecta()
+ void testDniVacio()
+ void testDniExistente()
+ void testTelefonoVacio()
+ void testTelefonoIncorrecto()
+ void testTelefonoExistente()
+ void testEmailVacio()
+ void testGetNombre()
+ void testGetApellido()
+ void testGetTelefono()
+ void testGetEdad()
+ void testGetDni()
+ void testGetEmail()
+ void testGetId()
+ void testGetNumeroMultas()
+ void testGetListaCliente()
+ void testGetReservasRealizas()
+ void testgetNumeroClientes()
+ void testBuscarCliente()
+ void testBuscarCliente2()
+ void testModificarCliente()
+ void testEliminarCliente()
}
interface org.core.RepositorioReserva {
~ {static} void cargarReservas()
~ void guardarReservas(java.util.Collection<Reserva>)
~ {static} void cargarEstadosReserva()
~ void guardarEstadosReserva(java.util.Collection<String>)
}
class org.core.Cliente {
- int idC
- String nombre
- String apellido
- String telefono
- String email
- String dni
- LocalDate fechaNacimiento
- int reservasRealizadas
- int multas
- {static} ServicioCliente servidor
- {static} List<Cliente> listaClientes
+ {static} Cliente buscarCliente(int)
+ {static} Cliente buscarCliente(String)
+ int getIdC()
+ String getNombre()
+ String getApellido()
+ String getEmail()
+ String getDni()
+ String getTelefono()
+ {static} List<Cliente> getListaClientes()
+ LocalDate getFechaNacimiento()
+ int getReservasRealizadas()
+ {static} int getNumeroClientes()
+ int getMultas()
+ int getEdad()
+ void modificarCliente(String,String,String,String,String,String)
+ void eliminarCliente()
+ String toString()
+ void setMultas()
+ void NuevaReservasRealizadas()
}
interface org.core.RepositorioAutocaravana {
~ {static} void guardarAutocaravana(Collection<Autocaravana>)
~ {static} void cargarAutocaravana()
~ {static} void cargarEstadosAutocaravana()
~ {static} void guardarEstadoAutocaravana(Collection<String>)
}
class org.core.Autocaravana {
- int idA
- String modelo
- float precioPorDia
- String matricula
- int plazas
- int kilometraje
- {static} int cantidadCaravanas
- {static} int cantidadCaravanasAlquiladas
- String estado
+ {static} ServicioAutocaravana servidor
- {static} List<Autocaravana> listaAutocaravanas
+ {static} List<Autocaravana> getListaAutocaravanas()
- int siguienteCaravana()
+ int getIdA()
+ String getModelo()
+ float getPrecioPorDia()
+ String getMatricula()
+ int getKilometraje()
+ void modificarKilometraje(int)
+ void modificarAutocaravana(String,float)
+ void actualizarkilometraje(int)
+ {static} Autocaravana buscarAutocaravana(int)
+ void modificarPrecio(float)
+ boolean quedanCaravanas()
+ {static} int getCantidadCaravanas()
+ String getEstado()
+ void cambiarEstado(String)
+ String toString()
+ int getCapacidad()
+ int getPlazas()
+ void NuevaReservasRealizadas()
+ void eliminarAutocaravana()
}
interface org.core.RepositorioCliente {
+ {static} void guardarCliente(java.util.Collection<Cliente>)
+ void guardarEstadosCliente(Collection<String>)
~ {static} void cargarClientes()
~ {static} void cargarEstadosCliente()
}
class org.core.ServicioReserva {
- {static} List<String> listaEstadoReserva
- {static} String RESERVAS_FILE
- {static} String ESTADOSRESERVAS_FILE
+ {static} void cargarReservas()
+ {static} void cargarEstadosReserva()
+ void guardarReservas(Collection<Reserva>)
+ void guardarEstadosReserva(Collection<String>)
+ {static} List<String> getListaEstadoReservas()
+ {static} void nuevoestado(String)
+ {static} void eliminarEstadoReserva(String)
+ {static} boolean comprobarEstadoReserva(String)
}


org.core.ReglasAutocaravana <|.. org.core.ServicioAutocaravana
org.core.RepositorioAutocaravana <|.. org.core.ServicioAutocaravana
org.core.ReglasCliente <|.. org.core.ServicioCliente
org.core.RepositorioCliente <|.. org.core.ServicioCliente
org.core.ReglasReserva <|.. org.core.ServicioReserva
org.core.RepositorioReserva <|.. org.core.ServicioReserva
@enduml